<resources>
    <string name="app_name">Trivia App</string>
    <string name="trivia">Trivia</string>
    <string name="logo">logo</string>
    <string name="next">next</string>
    <string name="prev">prev</string>
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="questions_are_shown_here">Questions are shown here..</string>
    <string name="_1_to_100">1 of 100</string>
    <string name="correct">Answer is correct</string>
    <string name="Wrong">Answer is wrong</string>
    <string name="by_mehedi">by Mehedi</string>
    <string name="highest_score_34">Current score = </string>
    <string name="highestscore">Highestscore :</string>
</resources>