<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    tools:context=".trivia">

    <Button
        android:id="@+id/btnwrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFC107"
        android:text="@string/wrong"
        android:textColor="#F40303"
        app:layout_constraintEnd_toStartOf="@+id/imgnext"
        app:layout_constraintTop_toBottomOf="@+id/cardview" />

    <TextView
        android:id="@+id/txtitle"
        android:layout_width="115dp"
        android:layout_height="46dp"
        android:layout_marginTop="140dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/trivia"
        android:textColor="#FB0606"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="377dp"
        android:layout_height="203dp"
        android:layout_marginTop="36dp"
        app:cardBackgroundColor="#FFEB3B"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtitle">

        <TextView
            android:id="@+id/ques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/questions_are_shown_here"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_gravity="center"
            />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="108dp"
        android:layout_height="63dp"
        app:layout_constraintBottom_toTopOf="@+id/txtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814"
        app:srcCompat="@drawable/ic_icon"
        android:contentDescription="@string/logo" />

    <Button
        android:id="@+id/btnright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="#FFC107"
        android:text="@string/right"
        android:textColor="#F40303"
        app:layout_constraintEnd_toStartOf="@+id/btnwrong"
        app:layout_constraintTop_toBottomOf="@+id/cardview" />

    <ImageButton
        android:id="@+id/imgprev"
        android:layout_width="60dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:background="#FFC107"
        app:layout_constraintEnd_toStartOf="@+id/btnright"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:srcCompat="@android:drawable/ic_media_previous"
        android:contentDescription="@string/prev" />

    <ImageButton
        android:id="@+id/imgnext"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="#FFC107"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:srcCompat="@android:drawable/ic_media_next"
        android:contentDescription="@string/next" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_to_100"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtitle"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>